# pylar-admin

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
pylar_admin/: __init__.py  actions.py  config.py  exceptions.py  field_types.py  provider.py  registry.py  serializer.py  site.py
pylar_admin/controllers/: __init__.py  api.py  auth.py  profile.py  queues.py  webauthn.py
pylar_admin/fields/: __init__.py  base.py  geo.py  simple.py
pylar_admin/spa/: index.html  package-lock.json  package.json  vite.config.ts
pylar_admin/spa/src/: App.vue  i18n.ts  router.ts
pylar_admin/spa/src/api/: client.ts  types.ts
pylar_admin/spa/src/assets/: main.css
pylar_admin/spa/src/components/: CodeBlock.vue  DataTable.vue  FormField.vue  Pagination.vue  Sidebar.vue  Toast.vue
pylar_admin/spa/src/components/fields/: AdminField.vue  GeoMapField.vue
pylar_admin/spa/src/stores/: admin.ts
pylar_admin/spa/src/views/: Cron.vue  Dashboard.vue  JobDetail.vue  Login.vue  ModelCreate.vue  ModelEdit.vue  ModelList.vue  Profile.vue  QueueDetail.vue  Queues.vue  Webauthn.vue
pylar_admin/translations/en/: admin.json
pylar_admin/translations/ru/: admin.json
tests/: conftest.py  test_actions.py  test_api.py  test_auth.py  test_field_types.py  test_fields.py  test_menu_endpoint.py  test_permissions.py  test_profile_endpoints.py  test_queue_endpoints.py  test_registry.py  test_schedule_endpoint.py  test_serializer.py  test_webauthn_endpoints.py
