[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pylar-admin"
version = "0.1.0"
description = "Vue.js SPA admin panel for the pylar-framework web framework"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Pylar Foundation", email = "pylar-foundation@vsibiri.info" }]
maintainers = [{ name = "Pylar Foundation", email = "pylar-foundation@vsibiri.info" }]
keywords = [
    "web",
    "framework",
    "admin",
    "panel",
    "vue",
    "spa",
    "pylar",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]
dependencies = [
    "pylar-framework>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=6.0",
    "aiosqlite>=0.20",
]

[project.urls]
Homepage = "https://pylar-foundation.github.io/pylar-framework/"
Documentation = "https://pylar-foundation.github.io/pylar-framework/"
Repository = "https://github.com/pylar-foundation/pylar-admin"
Issues = "https://github.com/pylar-foundation/pylar-admin/issues"
Changelog = "https://github.com/pylar-foundation/pylar-admin/blob/main/CHANGELOG.md"

[project.entry-points."pylar.providers"]
admin = "pylar_admin.provider:AdminServiceProvider"

[tool.hatch.build.targets.wheel]
packages = ["pylar_admin"]
# Build artifacts and dev-only sources we DON'T want in the wheel:
# node_modules (100M of npm deps), SPA source, vite config, ts config,
# package manifests. The compiled SPA in `spa/dist/` is force-included
# below — it's normally hidden by the global `dist/` rule in .gitignore.
exclude = [
    "pylar_admin/spa/node_modules",
    "pylar_admin/spa/src",
    "pylar_admin/spa/index.html",
    "pylar_admin/spa/vite.config.ts",
    "pylar_admin/spa/tsconfig.json",
    "pylar_admin/spa/env.d.ts",
    "pylar_admin/spa/package.json",
    "pylar_admin/spa/package-lock.json",
    "pylar_admin/spa/.gitignore",
]

[tool.hatch.build.targets.wheel.force-include]
"pylar_admin/spa/dist" = "pylar_admin/spa/dist"

[tool.hatch.build.targets.sdist]
exclude = [
    "pylar_admin/spa/node_modules",
    "pylar_admin/spa/dist",
    "htmlcov",
    ".coverage",
    ".coverage.*",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "tests/.coverage",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=pylar_admin --cov-report=term-missing:skip-covered --cov-report=html:htmlcov --cov-report=xml:htmlcov/coverage.xml --cov-branch --cov-fail-under=40"

[tool.coverage.run]
source = ["pylar_admin"]
branch = true

[tool.coverage.report]
precision = 1
show_missing = true
skip_covered = true
fail_under = 40
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
    "@overload",
    "raise NotImplementedError",
    "\\.\\.\\.",
]

[tool.coverage.html]
directory = "htmlcov"
